# ComfyUI-Manager-CN

./: cm-cli.py  cn_custom-node-list.json  cn_extension_node_map.json  git_helper.py  pyproject.toml  scanner.py
glob/: manager_core.py  manager_downloader_bdyp.py  manager_server.py
js/: cm-api.js  comfyui-manager.js  comfyui-share-common.js  common.js  components-manager.js  snapshot.js
notebooks/: comfyui_colab_with_manager.ipynb
